# notes-api

./: .pre-commit-config.yaml  Readme.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 8edc02158ba0_initial.py
src/: exceptions.py  main.py  settings.py
src/api/: routers.py
src/api/endpoints/: board.py  note.py
src/db/: __init__.py  session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 0926d7c39816_initial.py
src/db/models/: __init__.py  base.py  board.py  note.py
src/db/repository/: base.py  board.py  note.py
src/db/schemas/: board.py  note.py
src/services/: base.py  board.py  note.py
